# paw

./: .gitignore  Cargo.toml  README.md
benches/: common.rs  fpu-vs-micromath.rs  modx.rs  wt.rs
examples/: notebook.rs  sandbox.rs  wt.rs
notebooks/: one_pole.ipynb  wt.ipynb
src/: ctx.rs  lib.rs
src/adsr/: mod.rs
src/buffer/: mod.rs
src/components/: adsr.rs  env copy.rs  env.rs  lfo.rs  mod.rs  osc.rs
src/daw/: channel_rack.rs  mixer.rs  mod.rs
src/fx/: chorus.rs  delay.rs  dist.rs  fx_pack.rs  mod.rs
src/fx/filter/: mod.rs  one_pole.rs
src/macros/: mod.rs
src/midi/: event.rs  mod.rs  note.rs
src/modulation/: env.rs  lfo.rs  mod.rs  mod_pack.rs
src/modx/: env.rs  lfo.rs  mod.rs  mod_pack.rs
src/osc/: clock.rs  mod.rs
src/param/: f32.rs  int.rs  mod.rs  select.rs  ui.rs
src/sample/: frame.rs  mod.rs  time.rs
src/source/: mod.rs
src/synth/: mod.rs
src/value/: freq.rs  mod.rs  time.rs
src/voice/: controller.rs  mod.rs
src/wavetable/: mod.rs  osc.rs  synth.rs
