[package]
edition = "2021"
name = "paw"
version = "0.1.0"

[dependencies]
egui = {version = "^0.23.0", optional = true}
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
# micromath = "2.1.0"
num = {version = "0.4.3", default-features = false}
num-derive = "0.4.2"
num-traits = {version = "0.2.19", default-features = false, features = ["libm"]}
static_assertions = "1.1.0"
panic-halt = "1.0.0"
embedded-alloc = "0.6.0"
# micromath = {version = "2.1.0", features = ["num-traits"]}

[dev-dependencies]
criterion = {version = "0.5.1"}
nannou = "0.19.0"
nannou_audio = "0.19.0"
nannou_egui = "0.19.0"
plotters = "0.3.7"
pprof = {version = "0.14.0", default-features = false, features = ["criterion", "flamegraph"]}
rand = "0.9.0"

[features]
egui = ["dep:egui"]
# std = []

[[bench]]
harness = false
name = "modx"

[[bench]]
harness = false
name = "wt"

[[bench]]
harness = false
name = "common"

[[bench]]
harness = false
name = "fpu-vs-micromath"

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"

[profile.release]
debug = true
lto = 'fat'
codegen-units = 1
opt-level = 3

# [[bench]]
# harness = false
# name = "common"
